--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -18,6 +18,7 @@
   "block.veggiesdelight.cauliflower_crate": "Cauliflower Crate",
 
   "block.veggiesdelight.wild_bellpeppers": "Wild Bell Peppers",
+  "block.veggiesdelight.wild_cauliflowers": "Wild cauliflowers",
 
   "creativetab.veggiesdelight_tab": "Veggies' Delight"
 
