Added Vegan Pizza and did some re-textures

--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -20,6 +20,9 @@
   "block.veggiesdelight.wild_bellpeppers": "Wild Bell Peppers",
   "block.veggiesdelight.wild_cauliflowers": "Wild Cauliflowers",
 
-  "creativetab.veggiesdelight_tab": "Veggies' Delight"
+  "creativetab.veggiesdelight_tab": "Veggies' Delight",
+
+  "item.veggiesdelight.vegan_pizza": "Vegan Pizza",
+  "item.veggiesdelight.vegan_pizza_slice": "Vegan Pizza Slice"
 
 }
