Added a bunch of sweet potato food related, recipes and did some fixing/debugging

--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -15,6 +15,11 @@
   "item.veggiesdelight.cauliflower_soup": "Cauliflower Soup",
 
   "item.veggiesdelight.sweet_potato": "Sweet Potato",
+  "item.veggiesdelight.baked_sweet_potato": "Baked Sweet Potato",
+  "item.veggiesdelight.mashed_potatoes": "Mashed Potatoes",
+  "item.veggiesdelight.sweet_potato_pie": "Sweet Potato Pie",
+  "item.veggiesdelight.sweet_potato_Pie_slice": "Sweet Potato Pie Slice",
+
 
   "block.veggiesdelight.bellpepper_crate": "Bell Pepper Crate",
   "block.veggiesdelight.cauliflower_crate": "Cauliflower Crate",
