Added cauliflower burger and did some tweaking

--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -13,6 +13,7 @@
   "item.veggiesdelight.cauliflower_patty": "Cauliflower Patty",
   "item.veggiesdelight.cooked_cauliflower_patty": "Cooked Cauliflower Patty",
   "item.veggiesdelight.cauliflower_soup": "Cauliflower Soup",
+  "item.veggiesdelight.cauliflower_burger": "Cauliflower Burger",
 
   "item.veggiesdelight.sweet_potato": "Sweet Potato",
   "item.veggiesdelight.baked_sweet_potato": "Baked Sweet Potato",
