--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -5,6 +5,8 @@
   "item.veggiesdelight.shakshouka": "Shakshouka",
   "item.veggiesdelight.stuffed_bellpeppers": "Stuffed Bell Peppers",
   "item.veggiesdelight.bellpepper_seeds": "Bell Pepper Seeds",
+  "item.veggiesdelight.uncooked_mhadjeb": "Uncooked Mhadjeb",
+  "item.veggiesdelight.mhadjeb": "Mhadjeb",
 
   "item.veggiesdelight.cauliflower": "Cauliflower",
   "item.veggiesdelight.cauliflower_seeds":"Cauliflower Seeds",
@@ -19,7 +21,9 @@
   "item.veggiesdelight.baked_sweet_potato": "Baked Sweet Potato",
   "item.veggiesdelight.mashed_potatoes": "Mashed Potatoes",
   "item.veggiesdelight.sweet_potato_pie": "Sweet Potato Pie",
-  "item.veggiesdelight.sweet_potato_Pie_slice": "Sweet Potato Pie Slice",
+  "item.veggiesdelight.sweet_potato_pie_slice": "Sweet Potato Pie Slice",
+  "item.veggiesdelight.potato_noodle": "Potato Noodle",
+  "item.veggiesdelight.potato_noodles": "Potato Noodles",
 
 
   "block.veggiesdelight.bellpepper_crate": "Bell Pepper Crate",
