--- a/src/main/resources/assets/veggiesdelight/lang/fr_fr.json
+++ b/src/main/resources/assets/veggiesdelight/lang/fr_fr.json
@@ -25,52 +25,52 @@
   "item.veggiesdelight.potato_noodle": "Nouilles de Pommes de Terre",
   "item.veggiesdelight.potato_noodles": "Nouilles de Pommes de Terre",
 
-  "block.veggiesdelight.bellpepper_crate": "Caisson de Poivrons",
-  "block.veggiesdelight.cauliflower_crate": "Caisson de Chou-Fleur",
-  "block.veggiesdelight.sweet_potato_crate": "Caisson de Patates Douces",
+  "block.veggiesdelight.bellpepper_crate": "Caisse de Poivrons",
+  "block.veggiesdelight.cauliflower_crate": "Caisee de Choux-Fleurs",
+  "block.veggiesdelight.sweet_potato_crate": "Caisee de Patates Douces",
 
   "block.veggiesdelight.wild_bellpeppers": "Poivrons Sauvages",
   "block.veggiesdelight.wild_cauliflowers": "Choux-Fleurs Sauvages",
   "block.veggiesdelight.wild_sweet_potatoes": "Patates Douces Sauvages",
 
-  "creativetab.veggiesdelight_tab": "Délices Végétariens",
+  "creativetab.veggiesdelight_tab": "Veggies Delight",
 
   "item.veggiesdelight.vegan_pizza": "Pizza Végétalienne",
-  "item.veggiesdelight.vegan_pizza_slice": "Part de Pizza Végétalienne",
+  "item.veggiesdelight.vegan_pizza_slice": "Tranche de Pizza Végétalienne",
 
-  "veggiesdelight.advancement.root": "Délices Végétariens",
+  "veggiesdelight.advancement.root": "Veggies Delight",
   "veggiesdelight.advancement.root.desc": "Allez chercher vos légumes !",
 
   "veggiesdelight.advancement.fruit": "N'est-ce pas un fruit ?",
-  "veggiesdelight.advancement.fruit.desc": "Un imposteur parmi nous",
+  "veggiesdelight.advancement.fruit.desc": "Un imposteur \"Among Us\"",
 
   "veggiesdelight.advancement.first": "Commençons",
   "veggiesdelight.advancement.first.desc": "Collectez votre premier légume",
 
-  "veggiesdelight.advancement.all": "Il faut tous les attraper",
+  "veggiesdelight.advancement.all": "Gotta catch 'em all",
   "veggiesdelight.advancement.all.desc": "Collectionnez tous les légumes",
 
-  "veggiesdelight.advancement.eat": "C'est cru mais c'est encore comestible",
-  "veggiesdelight.advancement.eat.desc": "Mangez tout type de légume",
+  "veggiesdelight.advancement.eat": "C'est cru mais c'est quand même comestible",
+  "veggiesdelight.advancement.eat.desc": "Mangez ",
 
-  "veggiesdelight.advancement.pizza_time": "C'est l'heure de la pizza",
+  "veggiesdelight.advancement.pizza_time": "C'est l'heure de Pizza",
   "veggiesdelight.advancement.pizza_time.desc": "Préparez votre première Pizza Végétalienne",
 
-  "veggiesdelight.advancement.burger": "Fleur de Burger",
+  "veggiesdelight.advancement.burger": "Burger Bloom",
   "veggiesdelight.advancement.burger.desc": "Préparez un burger de chou-fleur",
 
   "veggiesdelight.advancement.cauliflower": "Végétarisme",
   "veggiesdelight.advancement.cauliflower.desc": "Faites frire des fleurs de chou-fleur, le poulet frit végétalien",
 
-  "veggiesdelight.advancement.pie": "Tranche sucrée de la vie",
+  "veggiesdelight.advancement.pie": "Slice Of Life",
   "veggiesdelight.advancement.pie.desc": "Préparez une tarte à la patate douce",
 
   "veggiesdelight.advancement.bellpepper_master": "Dr. Pepper",
   "veggiesdelight.advancement.bellpepper_master.desc": "Préparez tous les plats possibles à partir de poivrons",
 
-  "veggiesdelight.advancement.cauliflower_master": "Maître du Chou-Fleur",
+  "veggiesdelight.advancement.cauliflower_master": "Chou-master",
   "veggiesdelight.advancement.cauliflower_master.desc": "Préparez tous les plats possibles à partir de choux-fleurs",
 
-  "veggiesdelight.advancement.sweet_potato_master": "Chef Sucré",
+  "veggiesdelight.advancement.sweet_potato_master": "Sweet chef",
   "veggiesdelight.advancement.sweet_potato_master.desc": "Préparez tous les plats possibles à partir de patates douces"
 }
