Updated Lang again

--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -27,8 +27,8 @@
   "item.veggiesdelight.potato_noodle": "Potato Noodle",
   "item.veggiesdelight.potato_noodles": "Potato Noodles",
 
-  "block.veggiesdelight.garlic": "Garlic",
-  "block.veggiesdelight.garlic_clove": "Garlic Clove",
+  "item.veggiesdelight.garlic": "Garlic",
+  "item.veggiesdelight.garlic_clove": "Garlic Clove",
 
   "block.veggiesdelight.bellpepper_crate": "Bell Pepper Crate",
   "block.veggiesdelight.cauliflower_crate": "Cauliflower Crate",
