Added GarlicCrop models, blockstate

--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -29,6 +29,7 @@
 
   "item.veggiesdelight.garlic": "Garlic",
   "item.veggiesdelight.garlic_clove": "Garlic Clove",
+  "item.veggiesdelight.garlic_seeds": "Garlic Seeds",
 
   "block.veggiesdelight.bellpepper_crate": "Bell Pepper Crate",
   "block.veggiesdelight.cauliflower_crate": "Cauliflower Crate",
