Fixed French language in en_us.json

--- a/src/main/resources/assets/veggiesdelight/lang/fr_fr.json
+++ b/src/main/resources/assets/veggiesdelight/lang/fr_fr.json
@@ -51,7 +51,7 @@
   "veggiesdelight.advancement.all.desc": "Collectionnez tous les légumes",
 
   "veggiesdelight.advancement.eat": "C'est cru mais c'est quand même comestible",
-  "veggiesdelight.advancement.eat.desc": "Mangez ",
+  "veggiesdelight.advancement.eat.desc": "Mangez n'importe quelle sorte de légume",
 
   "veggiesdelight.advancement.pizza_time": "C'est l'heure de Pizza",
   "veggiesdelight.advancement.pizza_time.desc": "Préparez votre première Pizza Végétalienne",
