--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -58,7 +58,7 @@
   "veggiesdelight.advancement.all.desc": "Collect all of the veggies",
 
   "veggiesdelight.advancement.eat": "It's raw but it's still edible",
-  "veggiesdelight.advancement.eat.desc": "Mangez n'importe quelle sorte de légume",
+  "veggiesdelight.advancement.eat.desc": "Eat any kind of vegetable raw",
 
   "veggiesdelight.advancement.pizza_time": "It's pizza time",
   "veggiesdelight.advancement.pizza_time.desc": "Make your first Vegan Pizza",
@@ -67,7 +67,7 @@
   "veggiesdelight.advancement.burger.desc": "Make a cauliflower burger",
 
   "veggiesdelight.advancement.cauliflower": "The vegan way",
-  "veggiesdelight.advancement.cauliflower.desc": "Faites frire quelques fleurons de chou-fleur, le poulet frit végétalien",
+  "veggiesdelight.advancement.cauliflower.desc": "Fry some cauliflower floret, the vegan fried chicken",
 
   "veggiesdelight.advancement.pie": "Slice Of Life",
   "veggiesdelight.advancement.pie.desc": "Bake a sweet potato pie",
