Updated en_us lang

--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -30,6 +30,12 @@
   "item.veggiesdelight.garlic": "Garlic",
   "item.veggiesdelight.garlic_clove": "Garlic Clove",
   "item.veggiesdelight.garlic_seeds": "Garlic Seeds",
+  "item.veggiesdelight.roasted_garlic_clove": "Roasted Garlic Clove",
+  "item.veggiesdelight.garlic_bread": "Garlic Bread",
+  "item.veggiesdelight.garlic_rice_with_cauliflower": "Garlic Rice With Cauliflower",
+  "item.veggiesdelight.garlic_chicken_stew": "Garlic Chicken Stew",
+  "item.veggiesdelight.garlic_baked_cod": "Garlic Baked Cod",
+  "item.veggiesdelight.cesar_salad": "Cesar Salad",
 
   "block.veggiesdelight.bellpepper_crate": "Bell Pepper Crate",
   "block.veggiesdelight.cauliflower_crate": "Cauliflower Crate",
