Added fermented garlic honey food (bottleItem)

--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -36,12 +36,12 @@
   "item.veggiesdelight.garlic_chicken_stew": "Garlic Chicken Stew",
   "item.veggiesdelight.garlic_baked_cod": "Garlic Baked Cod",
   "item.veggiesdelight.cesar_salad": "Cesar Salad",
+  "item.veggiesdelight.fermented_garlic_honey": "Fermented Garlic Honey",
 
   "block.veggiesdelight.bellpepper_crate": "Bell Pepper Crate",
   "block.veggiesdelight.cauliflower_crate": "Cauliflower Crate",
   "block.veggiesdelight.garlic_crate": "Garlic Crate",
   "block.veggiesdelight.sweet_potato_crate": "Sweet Potato Crate",
-
 
   "block.veggiesdelight.wild_bellpeppers": "Wild Bell Peppers",
   "block.veggiesdelight.wild_cauliflowers": "Wild Cauliflowers",
