--- a/src/main/resources/assets/veggiesdelight/lang/fr_fr.json
+++ b/src/main/resources/assets/veggiesdelight/lang/fr_fr.json
@@ -41,6 +41,9 @@
   "item.veggiesdelight.cesar_salad": "Salade César",
   "item.veggiesdelight.fermented_garlic_honey": "Ail Fermenté Au Miel",
 
+  "item.veggiesdelight.beetroot_brownie": "Brownie aux betterave",
+  "item.veggiesdelight.carrot_juice": "Jus de carotte",
+
   "block.veggiesdelight.wild_bellpeppers": "Poivrons Sauvages",
   "block.veggiesdelight.wild_cauliflowers": "Choux-Fleurs Sauvages",
   "block.veggiesdelight.wild_sweet_potatoes": "Patates Douces Sauvages",
@@ -89,7 +92,7 @@
   "veggiesdelight.advancement.pie.desc": "Préparez une tarte à la patate douce",
 
   "veggiesdelight.advancement.med": "La Nature Qui Soigne",
-  "veggiesdleight.advancement.med.desc": "Préparez une Ail Fermenté Au Miel ",
+  "veggiesdelight.advancement.med.desc": "Préparez une Ail Fermenté Au Miel ",
 
   "veggiesdelight.advancement.cesar": "CAEEEEEEESAAAAAR",
   "veggiesdelight.advancement.cesar.desc": "Préparez une Salade César",
