--- a/src/main/resources/assets/veggiesdelight/lang/fr_fr.json
+++ b/src/main/resources/assets/veggiesdelight/lang/fr_fr.json
@@ -61,7 +61,7 @@
 
   "creativetab.veggiesdelight_tab": "Veggies Delight",
 
-  "item.veggiesdelight.vegan_pizza": "Pizza Végétalienne",
+  "block.veggiesdelight.vegan_pizza": "Pizza Végétalienne",
   "item.veggiesdelight.vegan_pizza_slice": "Tranche de Pizza Végétalienne",
 
   "veggiesdelight.advancement.root": "Veggies Delight",
