--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -21,7 +21,6 @@
   "item.veggiesdelight.sweet_potato": "Sweet Potato",
   "item.veggiesdelight.baked_sweet_potato": "Baked Sweet Potato",
   "item.veggiesdelight.mashed_potatoes": "Mashed Potatoes",
-  "item.veggiesdelight.sweet_potato_pie": "Sweet Potato Pie",
   "item.veggiesdelight.sweet_potato_pie_slice": "Sweet Potato Pie Slice",
   "item.veggiesdelight.potato_noodle": "Potato Noodle",
   "item.veggiesdelight.potato_noodles": "Potato Noodles",
@@ -56,6 +55,7 @@
   "item.veggiesdelight.carrot_juice": "Carrot Juice",
 
   "block.veggiesdelight.vegan_pizza": "Vegan Pizza",
+  "block.veggiesdelight.sweet_potato_pie": "Sweet Potato Pie",
 
   "block.veggiesdelight.wild_bellpeppers": "Wild Bell Peppers",
   "block.veggiesdelight.wild_cauliflowers": "Wild Cauliflowers",
