Reworked the brownies -Added new Beetroot Brownie Tray -Works just like pies -Added Beetroot Brownies Tray Block -updated the brownies textures

--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -56,6 +56,7 @@
 
   "block.veggiesdelight.vegan_pizza": "Vegan Pizza",
   "block.veggiesdelight.sweet_potato_pie": "Sweet Potato Pie",
+  "block.veggiesdelight.beetroot_brownie_tray": "Beetroot Brownie Tray",
 
   "block.veggiesdelight.wild_bellpeppers": "Wild Bell Peppers",
   "block.veggiesdelight.wild_cauliflowers": "Wild Cauliflowers",
