--- a/src/main/resources/assets/veggiesdelight/lang/fr_fr.json
+++ b/src/main/resources/assets/veggiesdelight/lang/fr_fr.json
@@ -40,8 +40,10 @@
   "item.veggiesdelight.cesar_salad": "Salade César",
   "item.veggiesdelight.fermented_garlic_honey": "Ail Fermenté Au Miel",
 
-  "item.veggiesdelight.beetroot_brownie": "Brownie aux betterave",
-  "item.veggiesdelight.carrot_juice": "Jus de carotte",
+  "item.veggiesdelight.beetroot_brownie": "Brownie Aux Betterave",
+  "item.veggiesdelight.carrot_juice": "Jus De Carotte",
+  "item.veggiesdelight.dandelion_juice": "Jus De Pissenlit",
+  "item.veggiesdelight.dandelion_leaf": "Feuille De Pissenlit",
 
   "block.veggiesdelight.wild_bellpeppers": "Poivrons Sauvages",
   "block.veggiesdelight.wild_cauliflowers": "Choux-Fleurs Sauvages",
