updated es_es translation

--- a/src/main/resources/assets/veggiesdelight/lang/es_es.json
+++ b/src/main/resources/assets/veggiesdelight/lang/es_es.json
@@ -36,10 +36,10 @@
   "item.veggiesdelight.cesar_salad": "Ensalada César",
   "item.veggiesdelight.fermented_garlic_honey": "Miel de Ajo Fermentada",
 
-  "block.veggiesdelight.bellpepper_crate": "Caja de Pimientos",
-  "block.veggiesdelight.cauliflower_crate": "Caja de Coliflor",
-  "block.veggiesdelight.garlic_crate": "Caja de Ajo",
-  "block.veggiesdelight.sweet_potato_crate": "Caja de Batata",
+  "block.veggiesdelight.bellpepper_crate": "Cajón de Pimientos",
+  "block.veggiesdelight.cauliflower_crate": "Cajón de Coliflor",
+  "block.veggiesdelight.garlic_crate": "Cajón de Ajo",
+  "block.veggiesdelight.sweet_potato_crate": "Cajón de Batata",
 
   "item.veggiesdelight.beetroot_pouch": "Bolsa de Semillas de Remolacha",
   "item.veggiesdelight.bellpepper_pouch": "Bolsa de Semillas de Pimiento",
