--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -8,6 +8,7 @@
   "item.veggiesdelight.uncooked_mhadjeb": "Uncooked Mhadjeb",
   "item.veggiesdelight.mhadjeb": "Mhadjeb",
   "item.veggiesdelight.vegan_pizza_slice": "Vegan Pizza Slice",
+  "item.veggiesdelight.steak_fajitas": "Steak Fajitas",
 
   "item.veggiesdelight.cauliflower": "Cauliflower",
   "item.veggiesdelight.cauliflower_seeds":"Cauliflower Seeds",
@@ -17,10 +18,14 @@
   "item.veggiesdelight.cooked_cauliflower_patty": "Cooked Cauliflower Patty",
   "item.veggiesdelight.cauliflower_soup": "Cauliflower Soup",
   "item.veggiesdelight.cauliflower_burger": "Cauliflower Burger",
+  "item.veggiesdelight.whole_roasted_cauliflower": "Whole Roasted Cauliflower",
 
   "item.veggiesdelight.sweet_potato": "Sweet Potato",
   "item.veggiesdelight.baked_sweet_potato": "Baked Sweet Potato",
   "item.veggiesdelight.mashed_potatoes": "Mashed Potatoes",
+  "item.veggiesdelight.sweet_potato_dough": "Sweet Potato Dough",
+  "item.veggiesdelight.sweet_potato_cupcake": "Mashed Potato Cupcake",
+  "item.veggiesdelight.sweet_potato_mochi": "Mashed Potato Mochi",
   "item.veggiesdelight.sweet_potato_pie_slice": "Sweet Potato Pie Slice",
   "item.veggiesdelight.potato_noodle": "Potato Noodle",
   "item.veggiesdelight.potato_noodles": "Potato Noodles",
@@ -35,6 +40,7 @@
   "item.veggiesdelight.garlic_baked_cod": "Garlic Baked Cod",
   "item.veggiesdelight.cesar_salad": "Cesar Salad",
   "item.veggiesdelight.fermented_garlic_honey": "Fermented Garlic Honey",
+  "item.veggiesdelight.garlic_stuffed_mushrooms": "Garlic Stuffed Mushrooms",
 
   "block.veggiesdelight.bellpepper_crate": "Bell Pepper Crate",
   "block.veggiesdelight.cauliflower_crate": "Cauliflower Crate",
@@ -55,6 +61,8 @@
   "item.veggiesdelight.carrot_juice": "Carrot Juice",
   "item.veggiesdelight.dandelion_juice": "Dandelion Juice",
   "item.veggiesdelight.dandelion_leaf": "Dandelion Leaf",
+  "item.veggiesdelight.fish_and_chips": "Fish And Chips",
+  "item.veggiesdelight.roasted_vegetables": "Roasted Vegetables",
 
   "block.veggiesdelight.vegan_pizza": "Vegan Pizza",
   "block.veggiesdelight.sweet_potato_pie": "Sweet Potato Pie",
