--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -24,8 +24,8 @@
   "item.veggiesdelight.baked_sweet_potato": "Baked Sweet Potato",
   "item.veggiesdelight.mashed_potatoes": "Mashed Potatoes",
   "item.veggiesdelight.sweet_potato_dough": "Sweet Potato Dough",
-  "item.veggiesdelight.sweet_potato_cupcake": "Mashed Potato Cupcake",
-  "item.veggiesdelight.sweet_potato_mochi": "Mashed Potato Mochi",
+  "item.veggiesdelight.sweet_potato_cupcake": "Sweet Potato Cupcake",
+  "item.veggiesdelight.sweet_potato_mochi": "Sweet Potato Mochi",
   "item.veggiesdelight.sweet_potato_pie_slice": "Sweet Potato Pie Slice",
   "item.veggiesdelight.potato_noodle": "Potato Noodle",
   "item.veggiesdelight.potato_noodles": "Potato Noodles",
