Added carrot cake block

--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -63,7 +63,7 @@
 
   "item.veggiesdelight.beetroot_brownie": "Beetroot Brownie",
   "item.veggiesdelight.carrot_juice": "Carrot Juice",
-  "item.veggiesdelight.carrot_cake": "Carrot Cake",
+  "block.veggiesdelight.carrot_cake": "Carrot Cake",
   "item.veggiesdelight.carrot_cake_slice": "Carrot Cake",
   "item.veggiesdelight.fish_and_chips": "Fish And Chips",
   "item.veggiesdelight.roasted_vegetables": "Roasted Vegetables",
