Added cauliflower bread

--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -14,6 +14,7 @@
   "item.veggiesdelight.cauliflower_seeds":"Cauliflower Seeds",
   "item.veggiesdelight.cauliflower_floret": "Cauliflower Floret",
   "item.veggiesdelight.fried_cauliflower_floret": "Fried Cauliflower Floret",
+  "item.veggiesdelight.cauliflower_bread": "Cauliflower Bread",
   "item.veggiesdelight.cauliflower_patty": "Cauliflower Patty",
   "item.veggiesdelight.cooked_cauliflower_patty": "Cooked Cauliflower Patty",
   "item.veggiesdelight.cauliflower_soup": "Cauliflower Soup",
