Added Chicken Fajitas wrap and removed the beef fajitas one

--- a/src/main/resources/assets/veggiesdelight/lang/en_us.json
+++ b/src/main/resources/assets/veggiesdelight/lang/en_us.json
@@ -9,6 +9,7 @@
   "item.veggiesdelight.mhadjeb": "Mhadjeb",
   "item.veggiesdelight.vegan_pizza_slice": "Vegan Pizza Slice",
   "item.veggiesdelight.steak_fajitas": "Steak Fajitas",
+  "item.veggiesdelight.chicken_fajitas_wrap": "Chicken Fajitas Wrap",
 
   "item.veggiesdelight.cauliflower": "Cauliflower",
   "item.veggiesdelight.cauliflower_seeds":"Cauliflower Seeds",
